refactor: rapikan arsitektur dan kontrak Quiz API
Pisahkan endpoint quiz set dan question menjadi Resource, Service, Panache Repository, serta mapper DTO. Pindahkan logika bisnis dan transaksi ke service, dan seragamkan status HTTP serta respons error.

Ubah options dari JSON string menjadi array dengan penyimpanan ElementCollection berurutan. Tambahkan validasi request, relasi quiz set, dan aturan bahwa jawaban harus ada dalam pilihan.

Tambahkan migrasi Flyway, OpenAPI, konfigurasi MySQL/H2 per lingkungan, serta rapikan dependensi, Docker, dan README. Perbarui test API menjadi berbasis DTO dan tambahkan pengujian perilaku CRUD, validasi, serta penghapusan relasi.

Verifikasi: mvnw package berhasil; 14 test lulus; docker compose config valid. Build image Docker belum dapat dijalankan karena daemon tidak aktif.