@@ -1,31 +1,24 @@
 package com.quiz.api.exception;
 
-import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.ext.ExceptionMapper;
 import jakarta.ws.rs.ext.Provider;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Provider
 public class ValidationExceptionMapper implements ExceptionMapper<ConstraintViolationException> {
 
     @Override
     public Response toResponse(ConstraintViolationException exception) {
-        List<String> messages = exception.getConstraintViolations()
-            .stream()
-            .map(ConstraintViolation::getMessage)
-            .collect(Collectors.toList());
-
-        Map<String, Object> responseBody = new HashMap<>();
-        responseBody.put("errors", messages);
-
+        List<ApiError.FieldError> errors = exception.getConstraintViolations().stream()
+                .map(violation -> {
+                    String path = violation.getPropertyPath().toString();
+                    String field = path.substring(path.lastIndexOf('.') + 1);
+                    return new ApiError.FieldError(field, violation.getMessage());
+                }).toList();
         return Response.status(Response.Status.BAD_REQUEST)
-            .entity(responseBody)
-            .build();
+                .entity(new ApiError("VALIDATION_ERROR", "Invalid request", errors)).build();
     }
 }
